[package]
name = "bunker_coin_core"
version = "0.1.0"
edition = "2021"
description = "Core algorithms and data types for BunkerCoin"

[dependencies]
light-poseidon = "0.3"
ark-bn254 = "0.5"
serde = { workspace = true }
sha2 = "0.10"
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }

[dev-dependencies]
rand = "0.8"