[package]
name = "bunker_coin_radio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bunker_coin_core = { workspace = true }
alpenglow = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
async-trait = "0.1"

reed-solomon-erasure = { version = "6", features = ["simd-accel"] }
bytes = "1"

[dev-dependencies]
tokio-test = "0.4" 